--- a/iDEdge.Local/iDEdge.Local.csproj
+++ b/iDEdge.Local/iDEdge.Local.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{C56905F5-7BA4-472C-BDBA-FDA3A413B2E7}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <RootNamespace>iDEdge</RootNamespace>
-    <AssemblyName>iDEdge.Core</AssemblyName>
+    <AssemblyName>iDEdge.Local</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
