--- a/iDEdge.Wizard/iDEdge.Wizard.csproj
+++ b/iDEdge.Wizard/iDEdge.Wizard.csproj
@@ -46,11 +46,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AboutBox1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AboutBox1.Designer.cs">
+      <DependentUpon>AboutBox1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormDonate.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormDonate.Designer.cs">
+      <DependentUpon>FormDonate.cs</DependentUpon>
     </Compile>
     <Compile Include="PageFailed.cs">
       <SubType>Form</SubType>
@@ -97,8 +109,14 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings.cs" />
+    <EmbeddedResource Include="AboutBox1.resx">
+      <DependentUpon>AboutBox1.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormDonate.resx">
+      <DependentUpon>FormDonate.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="PageFailed.resx">
       <DependentUpon>PageFailed.cs</DependentUpon>
@@ -153,7 +171,16 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\cover.png" />
+    <None Include="Resources\temp_qrcode_share_646751705.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\zfb.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\vx.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\qq.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
