--- a/iDEdge/iDEdge.csproj
+++ b/iDEdge/iDEdge.csproj
@@ -47,9 +47,17 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\iDEdge.Local\iDEdge.Local.csproj">
+      <Project>{c56905f5-7ba4-472c-bdba-fda3a413b2e7}</Project>
+      <Name>iDEdge.Local</Name>
+    </ProjectReference>
     <ProjectReference Include="..\iDEdge.Netease\iDEdge.Netease.csproj">
       <Project>{9bf795d9-771b-4633-b550-c42c59e5b5e0}</Project>
       <Name>iDEdge.Netease</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\iDEdge.Wizard\iDEdge.Wizard.csproj">
+      <Project>{ac21583d-f93b-4fc1-99a3-131403bcf274}</Project>
+      <Name>iDEdge.Wizard</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
