我咋把 res 嵌入了？？

--- a/iDEdge.Local/iDEdge.Local.csproj
+++ b/iDEdge.Local/iDEdge.Local.csproj
@@ -56,9 +56,9 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="iDEdge.Resources">
+    <None Include="iDEdge.Resources">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </EmbeddedResource>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
