--- a/iDEdge/iDEdge.csproj
+++ b/iDEdge/iDEdge.csproj
@@ -60,5 +60,8 @@
       <Name>iDEdge.Wizard</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
