--- a/iDEdge.Local/iDEdge.Local.csproj
+++ b/iDEdge.Local/iDEdge.Local.csproj
@@ -72,12 +72,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="iDEdge.Merge.exe">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="iDEdge.Resources">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
